# ansync

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  flake.nix  justfile  release.toml
.github/actions/attic-push/: action.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  rust-toolchain.toml  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/gameros/ansync/: AnsyncAccessibilityService.kt  AnsyncCompanionService.kt  AnsyncFsServer.kt  AudioMediaSession.kt  AudioRouter.kt  BootReceiver.kt  CameraLocalConfig.kt  CameraSession.kt  CameraSettingsActivity.kt  CaptureSession.kt  ClipboardBridge.kt  CursorOverlay.kt  FsOpCodec.kt  GamepadActivity.kt  GrantScreenCaptureActivity.kt  GrantStorageActivity.kt  HostDialer.kt  HostDiscovery.kt  KeepAlive.kt  KeycodeMap.kt  MainActivity.kt  MirrorMediaSession.kt  NativeBridge.kt  NotificationForwarder.kt  PairingActivity.kt  PairingReceiver.kt  Prefs.kt  SetupGuide.kt  SetupStepActivity.kt  ShareActivity.kt  TouchpadActivity.kt  WifiPairManager.kt  WireCameraControl.kt  WireInputMessage.kt  WireProgress.kt
android/app/src/main/java/org/gameros/ansync/input/: GamepadLayout.kt  GamepadSurface.kt  InputActivity.kt  InputMode.kt  InputRail.kt  InputSettingsActivity.kt  KeyboardStatusPill.kt  SoftKeyboardSink.kt  TouchpadSurface.kt
android/app/src/main/java/org/gameros/ansync/tile/: AudioSinkTile.kt  CameraTile.kt  GamepadTile.kt  MicShareTile.kt  MirrorTile.kt  ShareTile.kt  TouchpadTile.kt
android/app/src/main/java/org/gameros/ansync/ui/dialog/: AnsyncDialog.kt
android/app/src/main/res/drawable/: ic_ansync.xml  ic_camera.xml  ic_check.xml  ic_download.xml  ic_mic.xml  ic_mirror.xml  ic_share.xml  ic_stop.xml  ic_touchpad.xml  ic_upload.xml  ic_warning.xml
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/gradle/: libs.versions.toml
android/src/: lib.rs
bins/ansyncctl/: Cargo.toml
bins/ansyncctl/src/: main.rs
bins/ansyncd/: Cargo.toml
bins/ansyncd/contrib/: 60-ansync-uinput.rules  61-ansync-v4l2loopback.rules  ansync-modules-load.conf  ansync-v4l2loopback.conf  ansyncd.service
bins/ansyncd/src/: lib.rs  main.rs  mirror_renderer.rs  mirror_window.rs
crates/audio/: Cargo.toml
crates/audio/src/: aloop_backend.rs  cpal_backend.rs  lib.rs  opus_codec.rs  pipewire_backend.rs  select.rs
crates/camera/: Cargo.toml
crates/camera/src/: dyn_ctl.rs  lib.rs  v4l2loopback.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: lib.rs  wayland.rs  wayland_watcher.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  noise.rs  pair_pin.rs
crates/daemon-core/: Cargo.toml
crates/daemon-core/src/: lib.rs  mirror_subprocess.rs  perms_backend.rs
crates/dbus/: Cargo.toml
crates/dbus/src/: device.rs  lib.rs  manager.rs  pair.rs  permissions.rs  state.rs  util.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  mdns.rs
crates/files/: Cargo.toml
crates/files/src/: lib.rs  transfer.rs
crates/files/src/fs/: cache.rs  client.rs  fuse_mount.rs  mod.rs
crates/input/: Cargo.toml
crates/input/src/: bt_hid.rs  lib.rs  session.rs  uinput.rs
crates/pairing/: Cargo.toml
crates/pairing/src/: cable.rs  lib.rs  release.rs  store.rs  wifi.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: lib.rs  store.rs
crates/proto/: Cargo.toml
crates/proto/src/: frame.rs  lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  pinning.rs  quic.rs
crates/transport/tests/: echo.rs
crates/video/: Cargo.toml
crates/video/src/: feed.rs  ipc.rs  lib.rs  sink_egui.rs
nix/: fuse.nix  hm-module.nix  module.nix  package.nix  uinput.nix  v4l2loopback.nix
