[package]
name = "ansyncctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync CLI — D-Bus client for the ansync daemon"

[[bin]]
name = "ansyncctl"
path = "src/main.rs"

[dependencies]
ansync-crypto.workspace = true
ansync-dbus.workspace = true
ansync-pairing.workspace = true
clap.workspace = true
zbus.workspace = true
directories.workspace = true
futures.workspace = true
hex.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
