[package]
name = "ansyncd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync daemon — D-Bus surface, QUIC transport, screen mirror GUI"

[lib]
name = "ansyncd"
path = "src/lib.rs"

[[bin]]
name = "ansyncd"
path = "src/main.rs"

[dependencies]
ansync-core.workspace = true
ansync-daemon-core.workspace = true
ansync-dbus.workspace = true
ansync-video.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-journald.workspace = true
# wgpu, naga, winit emit diagnostics via the `log` crate. Without a
# bridge tracing_subscriber drops them silently, which means we
# can't see GPU validation errors. tracing-log forwards `log` records
# into tracing so the same EnvFilter and journald sink picks them up.
tracing-log = "0.2"
clap.workspace = true
eframe.workspace = true
egui.workspace = true
libc.workspace = true

[features]
default = []
# Step 6 standalone test path. Enables the `--play-file PATH` flag
# that feeds the decoder from a local Annex-B recording without an
# Android companion or QUIC stream. Strictly a dev / CI affordance —
# release builds (and the Nix derivation in Step 14) must keep this
# off so the daemon cannot be coerced into reading arbitrary local
# media files via CLI. eframe / egui / ansync-video stay in the prod
# link because the daemon needs them to render the real Android
# screen-mirror stream once Step 7 wires QUIC video in.
dev-playback = []
