[package]
name = "ansync-audio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — virtual audio sources / sinks (cpal default, ALSA/JACK future)"

[dependencies]
ansync-core.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

cpal = { workspace = true, optional = true }
audiopus = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }
libc = { workspace = true, optional = true }

[features]
default = ["opus", "cpal-backend", "pipewire-backend", "aloop-backend"]
cpal-backend = ["dep:cpal"]
opus = ["dep:audiopus"]
pipewire-backend = ["dep:pipewire", "dep:libspa"]
aloop-backend = ["dep:libc"]
