[package]
name = "ansync-audio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — virtual audio sources / sinks (cpal default, ALSA/JACK future)"

[dependencies]
ansync-core.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

cpal = { workspace = true, optional = true }
opus-rs = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }

[features]
# `pipewire-backend` is OFF by default — bindgen's
# `clang_macro_fallback` (libspa-sys 0.10.0) silently drops
# `SPA_ID_INVALID` inside the nix sandbox, breaking the deps build
# even with `BINDGEN_EXTRA_CLANG_ARGS` pointing at the clang resource
# dir. The dev-shell path works (cargo build --features
# pipewire-backend), and the daemon-core consumer turns it on
# explicitly. Drop this opt-out once libspa-sys ships a fix.
default = ["opus", "cpal-backend"]
cpal-backend = ["dep:cpal"]
opus = ["dep:opus-rs"]
pipewire-backend = ["dep:pipewire", "dep:libspa"]
