[package]
name = "ansync-clipboard"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — clipboard backend abstraction (wayland default, X11 follows)"

[dependencies]
ansync-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

wl-clipboard-rs = { workspace = true, optional = true }
wayland-client = { workspace = true, optional = true }
wayland-protocols-wlr = { workspace = true, optional = true }

[features]
default = []
wayland = [
    "dep:wl-clipboard-rs",
    "dep:wayland-client",
    "dep:wayland-protocols-wlr",
]
