[package]
name = "ansync-core"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — shared core types (DeviceId, Capabilities, Permissions, Error)"

[dependencies]
serde.workspace = true
thiserror.workspace = true
bitflags.workspace = true

[package.metadata.release]
release = false
