[package]
name = "ansync-daemon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — daemon orchestrator (registry, sessions, lifecycle)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-discovery.workspace = true
ansync-transport.workspace = true
ansync-pairing.workspace = true
ansync-permissions.workspace = true
ansync-dbus.workspace = true
ansync-proto.workspace = true
ansync-input = { workspace = true, features = ["uinput"] }
ansync-files.workspace = true
bytes.workspace = true
postcard.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "macros", "sync"] }
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
zbus.workspace = true
