[package]
name = "ansync-daemon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — daemon orchestrator (registry, sessions, lifecycle)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-discovery.workspace = true
ansync-transport.workspace = true
ansync-pairing.workspace = true
ansync-permissions.workspace = true
ansync-dbus.workspace = true
ansync-proto.workspace = true
ansync-input = { workspace = true, features = ["uinput"] }
ansync-files = { workspace = true, features = ["fuse"] }
ansync-video.workspace = true
ansync-camera = { workspace = true, features = ["v4l2loopback"] }
ansync-audio = { workspace = true, features = ["cpal-backend"] }
ansync-clipboard = { workspace = true, features = ["wayland"] }
bytes.workspace = true
postcard.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "macros", "sync"] }
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
zbus.workspace = true
libc.workspace = true

[features]
default = []
# Pass-through to the input crate; daemon-core picks the factory at
# runtime based on `DaemonConfig.input_backend`.
bt-hid = ["ansync-input/bt-hid"]
