[package]
name = "ansync-daemon-core"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — daemon orchestrator (registry, sessions, lifecycle)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-discovery.workspace = true
ansync-transport.workspace = true
ansync-pairing.workspace = true
ansync-permissions.workspace = true
ansync-dbus.workspace = true
ansync-proto.workspace = true
ansync-input = { workspace = true, features = ["uinput"] }
ansync-files.workspace = true
ansync-video.workspace = true
ansync-camera = { workspace = true, features = ["v4l2loopback"] }
ansync-audio = { workspace = true, features = ["cpal-backend", "opus", "pipewire-backend"] }
ansync-clipboard = { workspace = true, features = ["wayland"] }
async-trait.workspace = true
bytes.workspace = true
postcard.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "macros", "sync"] }
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
zbus.workspace = true
libc.workspace = true
sha2.workspace = true

[package.metadata.release]
release = false
