[package]
name = "ansync-dbus"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — D-Bus service org.gameros.Ansync1 (zbus 5)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-pairing.workspace = true
ansync-permissions.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
zbus.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "net", "io-util", "time", "rt"] }
tracing.workspace = true
uuid.workspace = true
hex.workspace = true

[package.metadata.release]
release = false
