[package]
name = "ansync-discovery"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — LAN device discovery (mDNS)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true

mdns-sd = { workspace = true, optional = true }

[features]
default = ["mdns"]
mdns = ["dep:mdns-sd"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
