[package]
name = "ansync-files"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — file transfer"

[dependencies]
ansync-core.workspace = true
ansync-proto.workspace = true
ansync-permissions.workspace = true
ansync-transport.workspace = true
async-trait.workspace = true
bytes.workspace = true
postcard.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "io-util"] }
tracing.workspace = true

[package.metadata.release]
release = false
