[package]
name = "ansync-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — virtual input devices (uinput default, BT-HID secondary)"

[dependencies]
ansync-core.workspace = true
ansync-permissions.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

input-linux = { workspace = true, optional = true }
bluer = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "time", "macros"] }

[features]
default = []
uinput = ["dep:input-linux"]
bt-hid = ["dep:bluer", "dep:tokio"]
