[package]
name = "ansync-input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — virtual input devices (uinput)"

[dependencies]
ansync-core.workspace = true
ansync-permissions.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

input-linux = { workspace = true, optional = true }

[features]
default = []
uinput = ["dep:input-linux"]
