[package]
name = "ansync-pairing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — pairing flows (cable ADB bootstrap, Wi-Fi PIN, BT-HID)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "fs", "macros", "time", "sync"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net"] }
