[package]
name = "ansync-pairing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — pairing flows (cable ADB bootstrap, Wi-Fi PIN, BT-HID)"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "fs", "macros", "time", "sync"] }
toml.workspace = true
tracing.workspace = true
bytes.workspace = true
directories.workspace = true

# `host` feature pulls in everything the desktop daemon / CLI needs to
# drive ADB and fetch APK releases. Android (and any other non-host
# embed of `ansync-pairing`) disables `default-features` to avoid
# linking against `aws-lc-sys` / `getentropy` (NDK API ≥ 28 only), and
# pulls only the wire-format halves of `cable.rs` + `store.rs`.
adb_client = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = ["host"]
host = [
    "dep:adb_client",
    "dep:reqwest",
    "dep:serde_json",
    "dep:sha2",
    "dep:hex",
    "dep:futures",
]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net"] }
