[package]
name = "ansync-permissions"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — per-device permission storage and enforcement"

[dependencies]
ansync-core.workspace = true
async-trait.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[package.metadata.release]
release = false
