[package]
name = "ansync-proto"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — on-wire message schema (postcard + serde, versioned)"

[dependencies]
ansync-core.workspace = true
serde.workspace = true
postcard.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }

[package.metadata.release]
release = false
