[package]
name = "ansync-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — transport abstraction with QUIC + rustls Ed25519-pinned default"

[dependencies]
ansync-core.workspace = true
ansync-crypto.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true

quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }

[features]
default = ["quic"]
quic = ["dep:quinn", "dep:rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:x509-parser"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
