[package]
name = "ansync-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — video decode pipeline (ferricast-decoder + wgpu sink)"

[dependencies]
ansync-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Step 5 wires ferricast-decoder in directly. The H.264 facade picks
# NVDEC → VA-API → openh264; the H.265 facade picks NVDEC → VA-API
# (no SW fallback — HEVC is HW-only by design).
ferricast-core.workspace = true
ferricast-decoder.workspace = true

[features]
default = []
