[package]
name = "ansync-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — video decode pipeline (ferricast-decoder + wgpu sink)"

[dependencies]
ansync-core.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Step 5 wires ferricast-decoder in directly. The H.264 facade picks
# NVDEC → VA-API → openh264; the H.265 facade picks NVDEC → VA-API
# (no SW fallback — HEVC is HW-only by design).
ferricast-core.workspace = true
ferricast-decoder.workspace = true

# eframe + egui used by the screen-mirror window (`sink_egui`).
# Daemon-core spawns the window on D-Bus ShowScreen; ansyncd's bin
# only re-exports it.
eframe.workspace = true
egui.workspace = true

[features]
default = []
