[package]
name = "ansync-video"
version = "0.1.0"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ansync — video decode pipeline (ferricast-decoder + wgpu sink)"

[dependencies]
ansync-core.workspace = true
ansync-proto.workspace = true
async-trait.workspace = true
bytes.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# Step 5 wires ferricast-decoder in directly. The H.264 facade picks
# NVDEC → VA-API → openh264; the H.265 facade picks NVDEC → VA-API
# (no SW fallback — HEVC is HW-only by design).
ferricast-core.workspace = true
ferricast-decoder.workspace = true

# eframe + egui used by the screen-mirror window (`sink_egui`).
# Daemon-core spawns the window on D-Bus ShowScreen; ansyncd's bin
# only re-exports it.
eframe.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
# Direct winit dep so `sink_egui` can opt the event loop into the
# any-thread mode (mirror window spawns from a worker thread, not
# main). Version pinned to match what eframe 0.31 transitively
# requires; cargo dedupes if either side moves.
winit = { version = "0.30", default-features = false, features = ["x11", "wayland"] }
# Gamepad input forwarded from the host window to the peer device.
# `gilrs` reads /dev/input/event* directly on Linux so neither the
# eframe window nor the wgpu adapter has to know about controllers.
gilrs = "0.11"

[features]
default = []

[package.metadata.release]
release = false
